css/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* make your tailwind components in this document */

@layer components {
  .reg-button {
    @apply bg-white
        rounded-md
        text-black
        px-2
        py-1
        text-xs
        font-semibold
        font-sans /* Default font AKA montserrat */
        hover:bg-[#333333]
        focus:bg-white
        focus:outline-none
        focus:ring
        focus:ring-black;
  }
  .alt-button {
    @apply bg-[#EE6352] /*TODO: change to correct color later.*/
        rounded-md
        text-white
        px-2
        pb-1
        pt-2
        text-xs
        font-semibold
        font-justAnotherHand
        hover:bg-[#F18275]
        active:bg-[#BE4F42]
        focus:outline-none
        focus:ring
        focus:ring-black;
  }
  .our-work-hero-button {
    @apply bg-[#5B8E7D]
        rounded-md
        text-[#F8EED1]
        border
        border-solid
        border-black
        min-w-[76px]
        h-[68px]
        text-[8px]
        font-medium
        text-center;
  }
  .meet-the-children-pageButton {
    @apply bg-[#CCCCCC]
        rounded-md
        text-black
        font-inter
        font-medium
        text-center
        text-lg
        px-4
        py-2
  }
}

/* Hide the default search input clear button */
.search-drawer_input::-webkit-search-cancel-button {
  -webkit-appearance: none;
  appearance: none;
}

/* Language selection animation */

#language-options {
  opacity: 0;
  max-height: 0;
  overflow: hidden;
  transition: opacity 0.5s, max-height 0.5s ease;
  position: absolute;
  left: 0;
  background-color: white;
}

.group:hover #language-options {
  opacity: 1;
  max-height: 200px;
}

/* Border radius for input fields */
.rounded-ib {
  border-radius: 10px;
}

/* Custom drop-shadow color for image frames */
.blue-shadow {
  box-shadow: 10px 10px 4px 0px #66c3ff;
}

